# Animecoin

./: .gitignore  CONTRIBUTING.md  COPYING  INSTALL  Makefile  Makefile.am  README.md  animecoin-qt.pro  configure.ac
src/: Makefile.am  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.cpp  addrdb.h  addrman.cpp  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  auxiliaryblockrequest.cpp  auxiliaryblockrequest.h  base58.cpp  base58.h  bech32.cpp  bech32.h  bignum.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  bitcoinrpc.cpp  bitcoinrpc.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  (+147 more)
src/compat/: byteswap.h  endian.h
src/config/: bitcoin-config.h
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: blake.c  bmw.c  chacha20.cpp  chacha20.h  common.h  groestl.c  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  jh.c  keccak.c  rfc6979_hmac_sha256.cpp  rfc6979_hmac_sha256.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_avx2.cpp  sha256_avx512.cpp  sha256_shani.cpp  sha256_sse4.cpp  sha256_sse41.cpp  sha512.cpp  sha512.h  skein.c  sph_blake.h  sph_bmw.h  sph_groestl.h  sph_jh.h  sph_keccak.h  sph_skein.h
src/crypto/ctaes/: COPYING  README.md  ctaes.c  ctaes.h  test.c
src/json/: json_spirit_writer_template.h
src/leveldb/util/: env_posix.cc
src/m4/: bitcoin_qt.m4
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile.am  aboutdialog.cpp  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askmultisigdialog.cpp  askmultisigdialog.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  bitcoin.cpp  bitcoin.qrc  bitcoin_locale.qrc  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  (+81 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  multisigdialog.ui  multisiginputentry.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  paperwalletdialog.ui  preimagedialog.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_af_ZA.qm  bitcoin_af_ZA.ts  bitcoin_ar.qm  bitcoin_ar.ts  bitcoin_bg.qm  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca_ES.qm  bitcoin_ca_ES.ts  bitcoin_cs.qm  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.qm  bitcoin_da.ts  bitcoin_de.qm  bitcoin_de.ts  bitcoin_el_GR.qm  bitcoin_el_GR.ts  bitcoin_en.qm  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.qm  bitcoin_es.ts  bitcoin_es_CL.qm  bitcoin_es_CL.ts  bitcoin_et.qm  bitcoin_et.ts  bitcoin_eu_ES.qm  bitcoin_eu_ES.ts  bitcoin_fa.qm  bitcoin_fa.ts  bitcoin_fa_IR.qm  bitcoin_fa_IR.ts  bitcoin_fi.qm  bitcoin_fi.ts  bitcoin_fr.qm  bitcoin_fr.ts  bitcoin_fr_CA.qm  bitcoin_fr_CA.ts  (+44 more)
src/qt/res/: bitcoin-qt-res.rc  bitcoin-qt.rc
src/qt/test/: Makefile.am  compattests.cpp  paymentservertests.cpp  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  wallettests.cpp  wallettests.h
src/rpc/: blockchain.cpp  client.cpp  client.h  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  rawtransaction.h  register.h  safemode.cpp  safemode.h  server.cpp  server.h
src/script/: bitcoinconsensus.cpp  bitcoinconsensus.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: configure.ac
src/secp256k1/src/: eckey_impl.h  tests.c
src/support/: cleanse.cpp  events.h  lockedpool.cpp  lockedpool.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile.am  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bctest.py  bignum.h  bignum_tests.cpp  bip32_tests.cpp  bitcoin-util-test.py  blockencodings_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  fs_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  leveldbwrapper_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  (+29 more)
src/test/data/: bitcoin-util-test.json  script_invalid.json  script_tests.json  script_valid.json  tx_invalid.json  tx_valid.json
src/univalue/: README  TODO  configure.ac  univalue.cpp  univalue.h  univalue_escapes.h  univalue_write.cpp
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_write.cpp
src/univalue/pc/: libunivalue-uninstalled.pc  libunivalue.pc
src/wallet/: coincontrol.h  coinselection.cpp  coinselection.h  crypter.cpp  crypter.h  db.cpp  db.h  feebumper.cpp  feebumper.h  fees.cpp  fees.h  init.cpp  init.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+78 files in other folders)
